--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+  alioss:
+    endpoint: https://oss-cn-beijing.aliyuncs.com
+    bucket-name: java-ai-lql
+    region: cn-beijing
+
