--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -38,3 +38,7 @@ sky:
     admin-ttl: 720000000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+  alioss:
+    bucket-name: ${sky.alioss.bucket-name}
+    endpoint: ${sky.alioss.endpoint}
+    regionn: ${sky.alioss.region}
