苍穹外卖管理端店铺营业状态设置和查询代码

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -10,4 +10,9 @@ sky:
     endpoint: https://oss-cn-beijing.aliyuncs.com
     bucket-name: java-ai-lql
     region: cn-beijing
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 0
 
