--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -43,7 +43,16 @@ sky:
     admin-ttl: 720000000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    # 用户的jwt签名加密时使用的秘钥
+    user-secret-key: itheima
+    # 用户的jwt过期时间
+    user-ttl: 720000000000
+    # 用户的jwt传递的令牌名称
+    user-token-name: authentication
   alioss:
     bucket-name: ${sky.alioss.bucket-name}
     endpoint: ${sky.alioss.endpoint}
     regionn: ${sky.alioss.region}
+  wechat:
+    app-id: ${sky.wechat.app-id}
+    secret: ${sky.wechat.secret}
